--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,49 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.2</version>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>post-unit-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<!-- Sets the path to the file which contains the execution data. -->
+							<excludes>
+								<exclude>com/example/movie/theater/model/*</exclude>
+								<exclude>com/example/movie/theater/payment/PaymentResponse.java</exclude>
+								<exclude>com/example/movie/theater/payment/PaymentStatus.java</exclude>
+								<exclude>com/example/movie/theater/seat/BookStatus.java</exclude>
+								<exclude>com/example/movie/theater/seat/SeatType.java</exclude>
+								<exclude>com/example/movie/theater/show/MovieShowTime.java</exclude>
+							</excludes>
+							<dataFile>target/jacoco.exec</dataFile>
+							<!-- Sets the output directory for the code coverage report. -->
+							<outputDirectory>target/test_coverage-ut</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
